# neo4j-runway

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  _.ipynb  _docstring.ipynb  _example_notebooks.ipynb  converted-data-model-sw-test.json.json  data-model.json  data-model.yaml  example.env  mkdocs.yml  pyproject.toml  requirements.txt  run_all_tests.sh  run_free_tests.sh  run_tests.sh  setup_precommit.sh  test-solutions-workbench-output.json  test.md.txt  test.py
.github/: pull_request_template.md
.github/workflows/: minor-release.txt  pages.yml  patch-release.txt  pr-integration-tests.yaml  pr.yaml
_docs/: _config.yml
_docs/summaries/: data_model.md  discovery.md  graph_data_modeler.md  inputs.md  load_csv_code_generator.md  load_data_dictionary_from_yaml.md  load_local_files.md  neo4j_graph.md  openai_data_modeling_llm.md  openai_discovery_llm.md  pyingest.md  pyingest_config_generator.md  standard_cypher_code_generator.md  table.md  utils.md
docs/: Gemfile  _config.yml  index.md
docs/_data/: navigation.yml
docs/_docs/: discovery.md
docs/_pages/: contribute.md  discovery.md  home.md  llm.md
docs/contribute/: main.md
docs/database/: neo4j_graph.md
docs/discovery/: discovery.md  discovery_content.md
docs/graph_eda/: cache.md  graph_eda.md
docs/ingestion/: pyingest.md
docs/inputs/: user_input.md
docs/summaries/: azure_openai_data_modeling_llm.md  azure_openai_discovery_llm.md  data_model.md  discovery.md  graph_data_modeler.md  graph_eda.md  inputs.md  llm.md  load_csv_code_generator.md  neo4j_graph.md  openai_data_modeling_llm.md  openai_discovery_llm.md  pyingest.md  pyingest_config_generator.md  standard_cypher_code_generator.md  table_collection.md  utils.md
examples/: README.md
examples/data/: got-battles.csv
examples/data_models/: pet-model-0.2.0.json
examples/end_to_end/: neo4jRunway_e2e.ipynb
examples/llm_providers/: azure_openai.ipynb
neo4j_runway/: __init__.py  build_streamlit_image.sh  exceptions.py  requirements.txt  warnings.py
neo4j_runway/code_generation/: __init__.py  base.py  generate_ingest.py
neo4j_runway/data/: csv_links.json
neo4j_runway/database/: __init__.py  base.py
neo4j_runway/discovery/: __init__.py  discovery.py  discovery_content.py
neo4j_runway/examples/: neo4jRunway_e2e.ipynb
neo4j_runway/graph_eda/: __init__.py  cache.py  eda_report.py  graph_eda.py  queries.py
neo4j_runway/grapheda/: eda_format.py  eda_report.py  eda_retrieval.py
neo4j_runway/ingestion/: __init__.py  cypher.py  generate_ingest.py  pyingest.py
neo4j_runway/inputs/: __init__.py  user_input.py
neo4j_runway/llm/: base.py  context.py  llm.py  retry.py
neo4j_runway/main/: _.ipynb  __init__.py  pydantic_test.ipynb  run_streamlit_image.sh
neo4j_runway/modeler/: __init__.py  modeler.py
neo4j_runway/models/: __init__.py
neo4j_runway/objects/: __init__.py  arrows.py  data_model.py  node.py  property.py  relationship.py  user_input.py
neo4j_runway/scripts/: generate_ingest_old.py
neo4j_runway/tests/: __init__.py  all_test_runner.py  dummies.py  free_test_runner.py  runner.py  test_arrows_data_model.py  test_data_model.py  test_data_model_with_multi_csv.py  test_data_modeler_free.py  test_data_modeler_with_yaml.py  test_discovery.py  test_ingest_generation.py  test_ingest_generation_multi_csv.py  test_load_csv_via_api.py  test_load_csv_via_api_multi_csv.py  test_load_csv_via_api_multi_csv_and_same_node_rel.py  test_modeler.py  test_naming_conventions.py  test_node.py  test_property.py  test_pyingest_dataframe.py  test_pyingest_multi_csv.py  test_relationship.py  test_relationship_csv_finder.py  test_user_input.py
neo4j_runway/utils/: __init__.py  naming_conventions.py  read_env.py  test_connection.py
resources/: llm-gen-KG-from-CSV.ipynb
scripts/: add_example_to_docs.py  refresh_class_documentation.py  refresh_function_documentation.py  update_docs_version.py
src/main/: .dockerignore  app.py  constraints.cypher  countries.ipynb  dockerfile  dockerfile-example  load_csv.cypher  load_csv_data_model_v2.cypher  main.ipynb  ppp_loan_data.ipynb  pydantic_test.ipynb  pyingest_config.yml  requirements.txt
test_downloads/: data_model_v1.json  load_csv.cypher
tests/: all_test_runner.py  free_test_runner.py  unit_test_runner.py
tests/resources/: people-pets-arrows-multi-csv.json  people-pets.yml  people_pets.py  pets.csv  post-ingest.yml  test_dirs.py
tests/test_code_generator/: test_ingest_generation.py  test_ingest_generation_multi_csv.py  test_pyingest_code_generation.py  test_pyingest_post_ingest_input.py  test_pyingest_pre_ingest_input.py  test_standard_code_generator.py
(+445 files in other folders)
