[tool.poetry]
name = "neo4j-runway"
version = "0.8.1"
description = "A Python library that contains tools for data discovery, data model generation and ingestion for the Neo4j graph database."
authors = ["Alex Gilmore", "Jason Booth", "Dan Bukowski"]
license = "MIT"
readme = "README.md"
keywords = ["graph", "neo4j", "data model"]
classifiers = [
    "Development Status :: 4 - Beta",
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python',
    'Topic :: Software Development :: Libraries :: Python Modules',
    "Programming Language :: Python :: 3",
    "Topic :: Database",
]
exclude = ["tests/*", "images/*", "test.ipynb", "data/", "Makefile", "scripts/*", "notebooks/*"]

[tool.poetry.dependencies]
python = "^3.10"
graphviz = "^0.20.1"
instructor = "^1.2.0"
ipython = "^8.24.0"
neo4j = "^5.19.0"
openai = "^1.12.0"
pandas = "^2.0.3"
pydantic = "^2.6.1"
pyyaml = "^6.0.1"
numpy = "^1.26.3"
regex = "~2024"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
black = "^24.4.2"
ipykernel = "^6.29.5"
nbconvert= "^7.16.4"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
